--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "00-practice-app",
-  "version": "0.1.0",
+  "name": "01-my-portfolio",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
